# rtc-wasm-full-app

./: .gitignore  README.md  package-lock.json  package.json  server.js
rtc-app/: README.md  angular.json  package-lock.json  package.json
rtc-app/public/: rtc_wasm_bg.wasm
rtc-app/src/: index.html  styles.less
rtc-app/src/app/: app.component.html  app.component.spec.ts  app.component.ts  mediasoup-bridge.js
rtc-app/src/app/nowasm/: nowasm.component.spec.ts  nowasm.component.ts
rtc-app/src/app/with-wasm/: with-wasm.component.html  with-wasm.component.spec.ts  with-wasm.component.ts
rtc-wasm/: Cargo.toml
rtc-wasm/src/: lib.rs
